--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "mongoose": "^5.2.8",
     "nodemon": "^1.18.3"
