--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
     "react-dom": "^16.4.2",
     "react-modal": "^3.5.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "sweetalert": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
