--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "react-modal": "^3.5.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
-    "sweetalert": "^2.1.0"
+    "sweetalert2": "^7.26.11"
   },
   "scripts": {
     "start": "react-scripts start",
